crates/strider-analyze/tests/snapshots/v2__mips32be__floats__float_to_int.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "5" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="FloatToInt\nf32 → u32", shape=box, fillcolor="#302018"];
  "6" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="bitcast\nu32 → f32", shape=box, fillcolor="#302018"];
  "7" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="init\nf12", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
